# MonadicConstraintProgramming

./: MonadicConstraintSatisfaction.cabal  README.md
src/Data/: Constraint.hs  ConstraintTree.hs  Domain.hs  Variable.hs
src/Util/: Bool.hs  Instances.hs  List.hs  Num.hs  Stream.hs
src/Util/Bool/: Instances.hs
test/Data/: ConstraintSpec.hs  VariableSpec.hs
