name:                MonadicConstraintSatisfaction
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Entze/MonadicConstraintSatisfaction#readme
license:             BSD3
license-file:        LICENSE
author:              Lukas Grassauer
maintainer:          lukas@grassauer.eu
copyright:           Lukas Grassauer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Constraint
                     , Data.Domain
                     , Data.Variable
                     , Util.Num
                     , Util.List
                     , Util.Stream
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6 && < 0.7
  default-language:    Haskell2010

executable MonadicConstraintSatisfaction
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MonadicConstraintSatisfaction
  default-language:    Haskell2010

test-suite MonadicConstraintSatisfaction-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MonadicConstraintSatisfaction
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Entze/MonadicConstraintSatisfaction
